2008-01-24 Raphael Neider <rneider AT web.de>

	* device/include/pic/pic16f88.h: added RA6 and RA7
	* device/lib/pic/libdev/disabled_pic16f886.c,
	* device/lib/pic/libdev/disabled_pic16f887.c: renamed and enabled

	* src/pic16/devices.inc,
	* device/include/pic16/pic18f2423.h,
	* device/include/pic16/pic18f2523.h,
	* device/include/pic16/pic18fregs.h,
	* device/lib/pic16/pics.all
	* device/lib/pic16/libdev/pic18f2423.c,
	* device/lib/pic16/libdev/pic18f2523.c: added 18f2423 and 18f2523
	* device/lib/pic16/libio/i2c.ignore,
	* device/lib/pic16/libio/usart.ignore,
	* device/lib/pic16/libio/adc.ignore: ignore new devices

2008-01-23 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (createRMW): fixed bug 1582651

2008-01-20 Borut Razem <borut.razem AT siol.net>

	* src/SDCCcse.c: partially fixed enhancement request
	  #1793872 - multiply by -1 not collapsed
	* support/regression/tests/arithcsi.c: added regression test

2008-01-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/mcs51/asx8051.dsp: removed define SDK
	* as/mcs51/i51mch.c (machine): fixed bug 1865114
	* device/include/asm/ds390/features.h: fixed bug with ds390 & stack-auto
	* as/link/lklex.c,
	* as/link/mcs51/lkmain.c: used LKDIRSEP, LKDIRSEPSTR and LKOBJEXT,
	  cosmetic changes, brought more in sync, changed old K&R to ANSI

2008-01-13 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added Uninstall/reinstall page, ...
	* src/SDCCicode.c: fixed bug #1870216 - Error 122: dividing by zero

2007-12-30 Borut Razem <borut.razem AT siol.net>

	* src/pic16/gen.c: fixed implementation of bitwise operations for
	  pic16 target
	* support/regression/tests/bitwise.c: added test cases

2007-12-29 Borut Razem <borut.razem AT siol.net>

	* src/SDCCasm.[ch]: renamed from asm[ch], use dbuf_getline(), ...
	* src/src.dsp, src/Makefile.bcc, src/Makefile.in, src/common.h,
	  src/SDCCglue.c, src/xa51/main.c: asm.[ch] renamed to SDCCasm.[ch]